@@ -1,8 +1,10 @@
 Changes to Version 3.0-11
 
-  o Introducted brief.tbl(), which simply calls print(), to cope with changes to tibbles.
+  o Introduced brief.tbl(), which simply calls print(), to cope with changes to tibbles.
   
   o qqPlot() fills (shades) confidence envelopes by default, and smoothers for scatterplots fill variance (spread) envelopes by default (suggestions of Michael Friendly).
+  
+  o Fixed problem in infIndexPlot.influence.lme() (reported by Francis L. Huang).
 
 Changes to Version 3.0-10
 
